@@ -1,3 +1,8 @@
+03 February 2009
+
+* New command, copy-buffer (alias copyb), to copy a session paste buffer to
+  another session.
+
 01 February 2009
 
 * The character pair #(command) may now contain (escaped) right parenthesis.
@@ -1074,7 +1079,7 @@
   (including mutt, emacs). No status bar yet and no key remapping or other
   customisation.
 
-$Id: CHANGES,v 1.246 2009-02-01 18:14:49 tcunha Exp $
+$Id: CHANGES,v 1.247 2009-02-03 17:21:19 tcunha Exp $
 
  LocalWords:  showw utf UTF fulvio ciriaco joshe OSC APC gettime abc DEF OA clr
  LocalWords:  rivo nurges lscm Erdely eol smysession mysession ek dstname RB ms
